# hotel_reservation_system

./: .gitignore  Pipfile  README.md  pyproject.toml
reservation_system/: __init__.py  auth.py  calendar.py  db.py  db_queries.py  dummy_data.sql  guests.py  helpers.py  invoice_items.py  invoices.py  payments.py  reservation_status.py  reservations.py  room_types.py  rooms.py  schema.sql  special_offers.py  users.py
reservation_system/static/: style.css
reservation_system/templates/: admin_base.html  auth_base.html  base.html
reservation_system/templates/auth/: login.html  register.html
reservation_system/templates/calendar/: index.html
reservation_system/templates/guests/: create.html  index.html  update.html
reservation_system/templates/homepage/: index.html
reservation_system/templates/invoice_items/: create.html  update.html
reservation_system/templates/invoices/: index.html  view.html
reservation_system/templates/overview/: index.html
reservation_system/templates/payments/: create.html  index.html  update.html
reservation_system/templates/reservation_status/: create.html  index.html  update.html
reservation_system/templates/reservations/: create.html  index.html  update.html
reservation_system/templates/room_types/: create.html  index.html  (+1 more)
tests/: conftest.py  data.sql  test_auth.py  test_calendar.py  test_data.sql  test_db.py  test_factory.py  test_guests.py  test_invoice_items.py  test_invoices.py  test_payments.py  test_reservation_status.py  test_reservations.py  test_room_types.py  test_rooms.py  test_special_offers.py  test_users.py
(+10 files in other folders)
